<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.ctrip.platform</groupId>
        <artifactId>dal-client-parent</artifactId>
        <version>2.1.11</version>
    </parent>
    <artifactId>dal-client-trip-parent</artifactId>
    <version>2.1.11</version>
    <packaging>pom</packaging>

    <modules>
        <module>ctrip-datasource</module>
        <module>ctrip-dal-client</module>
        <module>ctrip-dao-gen</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <dal-client.version>${project.version}</dal-client.version>
        <ctrip-datasource.version>${project.version}</ctrip-datasource.version>
        <ctrip-dal-client.version>${project.version}</ctrip-dal-client.version>
        <vi.version>0.11.5</vi.version>
        <framework-foundation.version>1.8.10</framework-foundation.version>
        <clogging-agent.version>4.2.9</clogging-agent.version>
        <cat-client.version>3.3.1</cat-client.version>
        <qconfig-client.version>1.100.19</qconfig-client.version>
        <qunar.common.version>9.2.10</qunar.common.version>
        <qtracer.version>1.3.9</qtracer.version>
        <ucs-client.version>0.2.0</ucs-client.version>
        <herald-token-lib.version>1.0.1</herald-token-lib.version>
        <netty.version>3.10.5.Final</netty.version>
        <mybatis.version>3.0.1</mybatis.version>
        <commons-lang3.version>3.3.2</commons-lang3.version>
        <mockito.version>2.10.0</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ctrip.platform</groupId>
                <artifactId>dal-client</artifactId>
                <version>${dal-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.platform</groupId>
                <artifactId>ctrip-datasource</artifactId>
                <version>${ctrip-datasource.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.platform</groupId>
                <artifactId>ctrip-dal-client</artifactId>
                <version>${ctrip-dal-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.framework</groupId>
                <artifactId>vi</artifactId>
                <version>${vi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.framework</groupId>
                <artifactId>framework-foundation</artifactId>
                <version>${framework-foundation.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.framework.clogging</groupId>
                <artifactId>clogging-agent</artifactId>
                <version>${clogging-agent.version}</version>
            </dependency>
            <dependency>
                <groupId>com.dianping.cat</groupId>
                <artifactId>cat-client</artifactId>
                <version>${cat-client.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.tc.qconfig</groupId>
                <artifactId>qconfig-client</artifactId>
                <version>${qconfig-client.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.common</groupId>
                <artifactId>common-core</artifactId>
                <version>${qunar.common.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.common</groupId>
                <artifactId>common-api</artifactId>
                <version>${qunar.common.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.common</groupId>
                <artifactId>common-lang</artifactId>
                <version>${qunar.common.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.common</groupId>
                <artifactId>common-concurrent</artifactId>
                <version>${qunar.common.version}</version>
            </dependency>
            <dependency>
                <groupId>qunar.tc.qtracer</groupId>
                <artifactId>qtracer-instrument-asm</artifactId>
                <version>${qtracer.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.framework.fx</groupId>
                <artifactId>ucs-client</artifactId>
                <version>${ucs-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ctrip.sysdev</groupId>
                <artifactId>herald-token-lib</artifactId>
                <version>${herald-token-lib.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.github.stefanbirkner</groupId>
                        <artifactId>system-rules</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
